# deloitte-sql-agent

./: .gitignore  README.md  a.py  benchmark.py  generate_sample_dump.py  main.py  pyproject.toml  sample.txt  sample_dump.db  sample_dump.sql  subset.sql
benchmark_artifacts/: latest_benchmark_report.md  latest_benchmark_report_kimi_smoke.md
docs/: benchmarks.md  current-state-and-next-features.md  deloitte-installation-guide.tex  how-it-works.md  usage.md
dump_reducer/: client.py  db_tools.py  planner.py  sql_gen.py  utils.py
dump_reducer/db_tools/: __init__.py  base.py  postgres.py  sqlite.py
tests/: test_benchmark_runner.py  test_client_cache.py  test_planner_parsing.py  test_sample_dump_generator.py  test_sql_gen.py  test_sqlite_tools.py
